<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtVwIpAdresi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/rsLblIpAdresi" />
    
	<EditText
		android:id="@+id/etIpAdresi"
		android:hint="@string/rsEtIpAdresiAciklama"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<requestFocus/> 
	</EditText>    

   	<TextView
        android:id="@+id/txtVwDatabase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/rsLblDatabaseAdi" />
    
	<EditText
		android:id="@+id/etDatabase"
		android:hint="@string/rsEtDatabaseAdi"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
	</EditText>    

   	<TextView
        android:id="@+id/txtVwKullaniciAdi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/rsLblKullanici" />
    
	<EditText
		android:id="@+id/etKullaniciAdi"
		android:hint="@string/rsEtKullanici"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
	</EditText>    

	
	<TextView
        android:id="@+id/txtVwSifre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/rsLblSifre" />
    
	<EditText
		android:id="@+id/etSifre"
		android:hint="@string/rsEtSifre"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
	</EditText>

	<Button 
    	android:id="@+id/btIslem"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
    	android:layout_marginTop="30dp">
		</Button>
<!-- 			
	<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
-->
        <TableLayout 
            android:id="@+id/tblConnectionsResult"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" 
            android:stretchColumns="*">
        </TableLayout>
<!--         
	</ScrollView>
 -->
</LinearLayout>