<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActWelcome" >

<!--      
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
 -->

        
        <ImageView
            android:id="@+id/Logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/rsImgLogoAciklama"
            android:src="@drawable/ic_launcher"
            android:width="150dp" />
        
        <Button
            android:id="@+id/btnQueryEditor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/rsBtnQueryAnalzer"
            android:layout_marginTop="30dp"
            android:width="150dp" />

        <Button
            android:id="@+id/btnAyar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/rsBtnAyarlar"
            android:width="150dp" />

		<Button
		    android:id="@+id/btnServers"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:layout_marginTop="30dp"
		    android:text="@string/rsBtnServers"
		    android:width="150dp" />
        
        <Button
            android:id="@+id/btnHakkinda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/rsBtnHakkinda"
            android:width="150dp" />
        

        
<!--    	
	</ScrollView>
-->

	
</LinearLayout>